// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShieldPage /> renders with registration disabled 1`] = `
<div
  className="bg-white col-md-4 col-md-offset-4 panel panel-default"
  id="shield-agent"
>
  <div
    className="panel-body"
  >
    <form
      id="login-form"
      onSubmit={[MockFunction]}
    >
      <Connect(LoginBox)
        prefix=""
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="mt-10 btn-block btn-success"
        disabled={false}
        id="confirm-login"
        type="submit"
      >
        <FormattedMessage
          id="global.login_me"
          values={Object {}}
        />
      </Button>
    </form>
  </div>
</div>
`;

exports[`<ShieldPage /> renders with registration disabled and classical auth by pass enabled 1`] = `
<div
  className="bg-white col-md-4 col-md-offset-4 panel panel-default"
  id="shield-agent"
>
  <div
    className="panel-body"
  >
    <div
      className="mb-10 font-weight-bold"
    >
      <FormattedMessage
        id="authenticate-with"
        values={Object {}}
      />
    </div>
    <Connect(LoginBox)
      prefix=""
    />
  </div>
</div>
`;

exports[`<ShieldPage /> renders with registration enabled 1`] = `
<div
  className="bg-white col-md-4 col-md-offset-4 panel panel-default"
  id="shield-agent"
>
  <div
    className="panel-body"
  >
    <InjectIntl(Connect(LoginButton))
      className="btn--connection btn-block"
    />
    <div
      className="mt-10"
    />
    <Connect(InjectIntl(RegistrationButton))
      className="btn-block"
    />
  </div>
</div>
`;
